fix bug: Apply button not aligned on Related Meetings page

--- a/cms_frontend/css/custom.css
+++ b/cms_frontend/css/custom.css
@@ -2139,6 +2139,10 @@ border: 1px solid #E3E3E3;
 border-radius: 4px;
 }
 
+.page-meetings-related-meetings .views-exposed-form .form-submit {
+margin-top: 26px;
+}
+
 
 /* SITEMAP */
 ul.site-map-menu li.expanded,
